@@ -1,3 +1,8 @@
+2006/05/25	muppetman
+
+	* t/GtkWidget.t, xs/GtkWidget.xs: Allow undef for the modify_foo
+	methods.  #342891
+
 2006/04/08	kaffeetisch
 
 	* Gtk2.pm, NEWS, README: Stable release 1.121.
